apps/kubelab/overseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/hostname: overseerr.mozka.tv
    external-dns.alpha.kubernetes.io/target: d8159c1f-555c-4b8a-b44b-db872b68f4d5.cfargotunnel.com
  name: overseerr-ingress
spec:
  ingressClassName: traefik
  rules:
    - host: overseerr.mozka.tv
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr
                port:
                  number: 5055
